<resources>
    <string name="app_name">EatMewls</string>
    <string name="store_activity_name">Our Suggestion</string>
    <string name="title_activity_maps">Map</string>
    <string name="cuisine1">Malay</string>
    <string name="cuisine2">Chinese</string>
    <string name="cuisine3">Indian</string>
    <string name="cuisine4">Japanese</string>
    <string name="cuisine5">Korean</string>
    <string name="cuisine6">Indonesian</string>
    <string name="cuisine7">Thai</string>
    <string name="cuisine8">Italian</string>
    <string name="cuisine9">Western</string>
    <string name="near_mrt">Near MRT only</string>
    <string name="selected_location">ToastBox</string>
    <string name="selected_address">Bishan St 12 #01-123</string>
    <string name="nearest_mrt">Located near Bishan MRT</string>
    <string name="filters">Filters</string>
    <string-array name="Locations">
        <item>Select Location</item>
        <item>Jurong East MRT</item>
        <item>Dhoby Ghaut MRT</item>
        <item>Tampines MRT</item>
        <item>Paya Lebar MRT</item>
        <item>Serangoon MRT</item>
    </string-array>

    <string-array name="min_ratings">
        <item>Set min</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="max_ratings">
        <item>Set max</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string name="title_activity_picker">Picker</string>
    <string name="DhobyGhaut">1.299101, 103.845679</string>
    <string name="JurongEast">1.334404, 103.742148</string>
    <string name="Tampines">1.355357, 103.942836</string>
    <string name="PayaLebar">1.318545, 103.893166</string>
    <string name="Serangoon">1.350947, 103.873803</string>
    <string name="dash">-</string>
    <string name="filter_by_ratings">Filter by Ratings:</string>
    <string name="max_distance_from_mrt">Max distance from MRT:</string>
    <string name="_200m">200m</string>
    <string name="todo">TODO</string>
    <string name="_5">5</string>
    <string name="let_us_decide_a_place_for_you">Let us decide a place for you!</string>


</resources>
