<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".StoreInfoActivity">

    <TextView
        android:id="@+id/selected_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/selected_location" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/star_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@android:drawable/btn_star_big_on" />

        <ImageView
            android:id="@+id/price_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@android:drawable/btn_star_big_off" />
    </LinearLayout>

    <TextView
        android:id="@+id/selected_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/selected_address" />

    <TextView
        android:id="@+id/nearest_mrt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nearest_mrt" />

    <ImageView
        android:id="@+id/gmap_preview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/ic_menu_mapmode" />

    <ImageButton
        android:id="@+id/open_gmaps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/editbox_background_normal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/randomize_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@android:drawable/editbox_background_normal" />

        <ImageButton
            android:id="@+id/return_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@android:drawable/editbox_background_normal" />
    </LinearLayout>
</LinearLayout>